<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olgag.mngclients.fragments.ClientFragment"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/searchClient"
            style="@style/search_view"
            android:queryHint="@string/search_client"
           />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/link_clients_opened_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opened_order"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/txtLinkClicked"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/link_clients_request_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requested_bid"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/txtLink"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/link_all_clients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_clients"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/txtLink"
            android:paddingBottom="5dp"/>
    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycViewClientss"
            />

    </LinearLayout>

</FrameLayout>