<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olgag.mngclients.fragments.OrderFragment"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <SearchView
            android:id="@+id/searchOrderByName"
            style="@style/search_view"
            android:queryHint="@string/search_order_by_name"
            />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boldStyle"
            android:text="@string/from"
            android:layout_gravity="center"
            android:layout_margin="5dp" />
        <TextView
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txtLink"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boldStyle"
            android:text="@string/to"
            android:layout_gravity="center"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txtLink"
            android:layout_gravity="center"
           />

        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <ImageButton
            android:id="@+id/searchOrder"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center|end"
            android:background="@drawable/searchview_rounded"
            android:src="?android:attr/actionModeWebSearchDrawable"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/link_opened_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opened_order"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/txtLinkClicked"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/link_request_bids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requested_bid"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/txtLink"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/link_all_orderss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_orders"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/txtLink"
                android:paddingBottom="5dp"/>
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycViewClientsOrders"/>
    </LinearLayout>
</FrameLayout>