<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.olgag.mngclients.activities.AddUpdateClient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/imgBtnGoBack"
            style="@style/imgBtnTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/lbl_add_client"
            style="@style/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/add_new_client" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:id="@+id/imgBtnSaveClient"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_galo4ka"
            style="@style/imgBtnTab"
            android:layout_gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/tab_bar_height">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_add_client">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblClientName"
                    android:hint="@string/name"
                    style="@style/inputs"             >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputClientName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="30"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblClientAddress"
                    android:hint="@string/address"
                    app:startIconTint="@drawable/common_google_signin_btn_text_light"
                    style="@style/inputs">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputClientAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="50"
                        android:inputType="textPostalAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblClientPhoneNumber1"
                    android:hint="@string/phone_number"
                    style="@style/inputs">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputClientPhoneNumber1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:inputType="numberSigned"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/link_add_client_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note"
                    android:layout_marginTop="5dp"
                    style="@style/txtLink"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lblClientDescription"
                        android:hint="@string/note"
                        style="@style/inputs"
                        android:visibility="gone">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputClientDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:lines="3"
                            android:maxLines="5"
                            android:maxLength="200"
                            android:inputType="textMultiLine"/>
                    </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/link_add_phone_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_phone_number2"
                    android:layout_marginTop="5dp"
                    style="@style/txtLink"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblClientPhoneNumber2"
                    android:hint="@string/phone_number"
                    style="@style/inputs"
                    android:visibility="gone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputClientPhoneNumber2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="13"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
   </ScrollView>
        <TextView
            android:id="@+id/link_add_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_order"
            android:layout_marginTop="5dp"
            style="@style/txtLink"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycViewOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/btn_fab"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
<!--    style="@style/fabs"-->